<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cifer.nova.ciferapp.inova.RegistarseMainThisIsActivity"
    tools:showIn="@layout/activity_registarse_main_this_is">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/belen_jaku_min" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:paddingTop="30dp"
            android:text="Jaku"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:padding="30dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_strate"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/fb_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_boton"
                    android:layout_margin="2dp"
                    android:padding="25dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/button_fb" />

                <TextView
                    android:id="@+id/text_fb_conect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="@dimen/pading_text"
                    android:text="@string/google_colaps"
                    android:textColor="#ffffff" />
            </RelativeLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/linae_sep_init"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/sign_in_button_google"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_boton"
                    android:layout_margin="2dp"
                    android:padding="25dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/button_gogle"
                    android:contentDescription="" />

                <TextView
                    android:id="@+id/text_google_conect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="@dimen/pading_text"
                    android:text="@string/google_colaps"
                    android:textColor="#ffffff" />
            </RelativeLayout>


            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_button_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1sp"
                android:visibility="gone" />

        </LinearLayout>


    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
